k8s/ruudniewtv-stream-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruudniewtv-stream-website
  namespace: dutchdelhicacy
  labels:
    deployment-name: "ruudniewtv-stream-website"
spec:
  ports:
    - name: "http"
      port: 3101
      targetPort: 3101
  selector:
    deployment-name: "ruudniewtv-stream-website"
status:
  loadBalancer: {}
